updated the codes

--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
       <p>Upload the image</p>
       <form action="/" method="post" enctype="multipart/form-data">
         <div class="custom-file">
-          <input type="file" class="custom-file-input" name="image" id="customFile" />
+          <input type="file" class="custom-file-input" name="image" id="customFile" accept="image/jpeg" />
           <label class="custom-file-label" for="customFile">
             Choose file
           </label>
