--- a/templates/results.html
+++ b/templates/results.html
@@ -1,11 +1,17 @@
 <div class="container mt-5">
-  <div class="container-fluid d-flex justify-content-around flex-wrap">
-    {% for i in centers %}
-    <div class="_img text-center">
-      <img src="{{url_for('static', filename='/images/' + i + '.png')}}" class="rounded w-100" />
-      <h4>{{i}}</h4>
+  <div class="d-flex flex-column align-items-center justify-content-center">
+    <div>
+      <img src="{{url_for('static', filename='/images/full.png')}}" class="img-fluid mx-auto" alt="Responsive image">
+      <h5 class="text-center">The superposed image</h5>
     </div>
-    {% endfor %}
+    <div class="container-fluid d-flex justify-content-around flex-wrap">
+      {% for i in centers %}
+      <div class="_img text-center">
+        <img src="{{url_for('static', filename='/images/' + i + '.png')}}" class="rounded w-100" />
+        <h4>{{i}}</h4>
+      </div>
+      {% endfor %}
+    </div>
   </div>
   <table class="table table-bordered table-striped table-dark">
     <thead>
@@ -14,7 +20,7 @@
         <th scope="col">Partition Coefficient</th>
         <th scope="col">Classification Entropy</th>
         <th scope="col">Xie and Beni</th>
-        <th scope="col">Subarea Coefficient</th>
+        <th scope="col">execution time</th>
       </tr>
     </thead>
     <tbody>
@@ -23,11 +29,12 @@
         <td>{{partition_coefficient}}</td>
         <td>{{classification_entropy}}</td>
         <td>{{xie_beni}}</td>
-        <td>{{subarea_coefficient}}</td>
+        <td>{{time}}</td>
       </tr>
     </tbody>
   </table>
   <a class="btn btn-primary btn-lg btn-block" href="/download" role="button">download the results</a>
+  <a class="btn btn-primary btn-lg btn-block" href="/" role="button">Home</a>
 </div>
 <style>
   ._img {
